--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@ a {text-decoration: none;color: #000;}
 .main  .task-count a {display: block;float: left;border:1px solid #ccc;text-align: center;margin-left: 20px;padding: 0 20px;}
 .main  .task-count  .action {float: right;}
 .tasks .todo-list li {width: 100%;position: relative;margin: 5px;height: 25px;}
-.tasks .todo-list .edit {position: absolute;display: block;width: 100%;height: 25px;left: 0;top: 0;z-index: -1;}
+.tasks .todo-list .edit {position: absolute;display: block;width: 100%;height: 25px;left: 0;top: 0;z-index: -1;display: none;}
 .tasks .todo-list label {line-height: 25px;margin-left: 10px;}
 .tasks .todo-list .destroy {height: 10px; width:5px;position: absolute;right: 5px;top: 10px;width: 10px;height: 10px;}
 .tasks .todo-list .view input {margin-left: 5px;vertical-align: center;}
 .tasks .todo-list .completed {text-decoration: line-through;color: #ccc;}
-.tasks .todo-list .editing:first-child {}
+.tasks .todo-list .editing input {display: block;z-index: 1;}
+.tasks .todo-list .editing div {display: none;}
 </style>
 <script src="vue.js"></script>
 <body>
@@ -39,7 +40,7 @@ a {text-decoration: none;color: #000;}
 		<h3 class="big-title">添加任务：</h3>
 		<input type="text" placeholder="例如：吃饭睡觉打豆豆   提示：+回车可添加任务" class="task-input" v-on:keyup.enter="addToDo" v-model="todo">
 		<ul class="task-count" v-show="list.length">
-			<li>1个任务未完成</li>
+			<li>{{nochecked}}个任务未完成</li>
 			<li class="action">
 				<a href="#">所有任务</a>
 				<a href="">未完成任务</a>
@@ -56,7 +57,13 @@ a {text-decoration: none;color: #000;}
 						<label @dblclick="edtortodo(item)">{{item.title}}</label>
 						<button class="destroy" @click="deletetodo"></button>
 					</div>
-					<input type="text" class="edit">
+					<input v-focus="edtorTodos === item" 
+					       type="text" 
+					       class="edit" 
+					       v-model="item.title"
+					       @blur="edtortodoed(item)"
+					       @keyup.enter="edtortodoed(item)"
+					       @keyup.esc="canceltodo(item)">
 				</li>
 				
 			</ul>
