--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@ a {text-decoration: none;color: #000;}
 .page-top .page-content{width: 60%;margin: 0 auto;}
 .page-top .page-content h2{text-align: left;line-height: 60px;color: #fff;}
 .main {width: 60%;margin: 0 auto;}
-.main .task-input {width: 100%;margin: 10px auto;}
+.main .task-input {width: 100%;margin: 10px auto;height: 25px;border-radius: 5px;outline: none;}
 .main .task-count {width: 100%;}
-.main .task-count li {float: left;display: block;padding: 5px 0;width: 50%;color: red;}
+.main .task-count li {float: left;display: block;padding: 5px 0;width: 50%;color: red;;}
 .main  .big-title {clear: both;display: block;padding-top: 5px;}
-.main  .task-count a {display: block;float: left;border:1px solid #ccc;text-align: center;margin-left: 20px;padding: 0 20px;}
+.main  .task-count a {display: block;float: right;border:1px solid #ccc;text-align: right;margin-left: 30px;border-radius: 5px;}
+.main  .task-count a:hover {box-shadow: 0 0 6px red;}
 .main  .task-count  .action {float: right;}
 .tasks .todo-list li {width: 100%;position: relative;margin: 5px;height: 25px;}
-.tasks .todo-list .edit {position: absolute;display: block;width: 100%;height: 25px;left: 0;top: 0;z-index: -1;display: none;}
+.tasks .todo-list .edit {position: absolute;display: block;width: 100%;height: 25px;left: 0px;top: 5px;z-index: -1;display: none;}
 .tasks .todo-list label {line-height: 25px;margin-left: 10px;}
-.tasks .todo-list .destroy {height: 10px; width:5px;position: absolute;right: 5px;top: 10px;width: 10px;height: 10px;}
-.tasks .todo-list .view input {margin-left: 5px;vertical-align: center;}
+.tasks .todo-list .destroy {height: 15px; width:15px;position: absolute;right: 10px;top: 5px;display: none;border:none;background-image: url(2.png);background-size: 20px;background-color: #fff;outline: none;}
+.tasks .todo-list .view {border:1px solid #ccc;border-radius: 5px;margin-top: 10px;box-shadow: 2px 2px 2px #ccc;}
+.tasks .todo-list .view:hover {box-shadow: 0 0 10px #333;}
+.tasks .todo-list .view:hover button {display: block;/*background-color: #fff*/;}
+.tasks .todo-list .view input {margin-left: 5px;line-height: 25px;display: inline-block;}
 .tasks .todo-list .completed {text-decoration: line-through;color: #ccc;}
 .tasks .todo-list .editing input {display: block;z-index: 1;}
 .tasks .todo-list .editing div {display: none;}
@@ -52,9 +56,9 @@ a {text-decoration: none;color: #000;}
 			<span  v-show="!list.length" class="no-task-tip">还没有添加任何任务</span>
 			<ul class="todo-list">
 				<li class="todo" :class="{completed:item.ischecked,editing:item === edtorTodos}" v-for="item in list">
-					<div class="view">
+					<div class="view"  @dblclick="edtortodo(item)">
 						<input type="checkbox" class="toggle" v-model="item.ischecked">
-						<label @dblclick="edtortodo(item)">{{item.title}}</label>
+						<label>{{item.title}}</label>
 						<button class="destroy" @click="deletetodo"></button>
 					</div>
 					<input v-focus="edtorTodos === item" 
@@ -63,7 +67,8 @@ a {text-decoration: none;color: #000;}
 					       v-model="item.title"
 					       @blur="edtortodoed(item)"
 					       @keyup.enter="edtortodoed(item)"
-					       @keyup.esc="canceltodo(item)">
+					       @keyup.esc="canceltodo(item)"
+					       >
 				</li>
 				
 			</ul>
