--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@ a {text-decoration: none;color: #000;}
 .main {width: 60%;margin: 0 auto;}
 .main .task-input {width: 100%;margin: 10px auto;height: 25px;border-radius: 5px;outline: none;}
 .main .task-count {width: 100%;}
-.main .task-count li {float: left;display: block;padding: 5px 0;width: 50%;color: red;;}
+.main .task-count li {float: left;display: block;padding: 5px 0;color: red;}
 .main  .big-title {clear: both;display: block;padding-top: 5px;}
 .main  .task-count a {display: block;float: right;border:1px solid #ccc;text-align: right;margin-left: 30px;border-radius: 5px;}
 .main  .task-count a:hover {box-shadow: 0 0 6px red;}
 .main  .task-count  .action {float: right;}
+.main  .task-count  .action .active {box-shadow: 0 0 15px green;}
 .tasks .todo-list li {width: 100%;position: relative;margin: 5px;height: 25px;}
 .tasks .todo-list .edit {position: absolute;display: block;width: 100%;height: 25px;left: 0px;top: 5px;z-index: -1;display: none;}
 .tasks .todo-list label {line-height: 25px;margin-left: 10px;}
@@ -45,17 +46,17 @@ a {text-decoration: none;color: #000;}
 		<input type="text" placeholder="例如：吃饭睡觉打豆豆   提示：+回车可添加任务" class="task-input" v-on:keyup.enter="addToDo" v-model="todo">
 		<ul class="task-count" v-show="list.length">
 			<li>{{nochecked}}个任务未完成</li>
-			<li class="action">
-				<a href="#">所有任务</a>
-				<a href="">未完成任务</a>
-				<a href="">完成任务</a>
+			<li class="action" id = "btn1">
+				<a class="active" href="#all">所有任务</a>
+				<a href="#unfinished">未完成任务</a>
+				<a href="#finished">完成任务</a>
 			</li>
 		</ul>
 		<h3 class="big-title">任务列表：</h3>
 		<div class="tasks">
 			<span  v-show="!list.length" class="no-task-tip">还没有添加任何任务</span>
 			<ul class="todo-list">
-				<li class="todo" :class="{completed:item.ischecked,editing:item === edtorTodos}" v-for="item in list">
+				<li class="todo" :class="{completed:item.ischecked,editing:item === edtorTodos}" v-for="item in filterdList">
 					<div class="view"  @dblclick="edtortodo(item)">
 						<input type="checkbox" class="toggle" v-model="item.ischecked">
 						<label>{{item.title}}</label>
